--- a/Restaurant Ordering System/package.json
+++ b/Restaurant Ordering System/package.json
@@ -2,8 +2,9 @@
   "name": "restaurant-ordering-system",
   "version": "1.0.0",
   "description": "SoundScape Version 0.2\r Start Date: 3/30/2025",
-  "main": "index.js",
+  "main": "js/server.js",
   "scripts": {
+    "start": "node js/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
