--- a/Restaurant Ordering System/package.json
+++ b/Restaurant Ordering System/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "bcrypt": "^6.0.0",
     "formidable": "^3.5.4",
-    "mysql2": "^3.15.3"
+    "mysql2": "^3.15.3",
+    "qrcode": "^1.5.4"
   }
 }
