--- a/Restaurant Ordering System/package.json
+++ b/Restaurant Ordering System/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^6.0.0",
     "formidable": "^3.5.4",
     "mysql2": "^3.15.1"
   }
